# pour

./: .gitignore  CMakeLists.txt  DISTRIBUTION.md  JUCE  build_installer.sh  distribute.sh  generate_test_key.js  sign_aax.sh  wrap_aax.sh
.github/workflows/: build-windows.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: StereoImageEngine.cpp  StereoImageEngine.h
Source/Licensing/: ActivationDialog.cpp  ActivationDialog.h  LicenseManager.cpp  LicenseManager.h
Source/Parameters/: ParameterFactory.cpp  ParameterFactory.h
Source/UI/: PourPanel.cpp  PourPanel.h
Source/UI/Components/: BottomBar.cpp  BottomBar.h  Goniometer.cpp  Goniometer.h  LedMeter.cpp  LedMeter.h  PourButton.cpp  PourButton.h  PourKnob.cpp  PourKnob.h  PresetBrowser.cpp  PresetBrowser.h
Source/UI/LookAndFeel/: PourLookAndFeel.cpp  PourLookAndFeel.h
installer/windows/: pour.iss
